infrastructure/kafka/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kafka-ui
  namespace: kafka
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - kafka.stud-hub.me
      secretName: kafka-ui-tls

  rules:
    - host: kafka.stud-hub.me

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
